<resources>
    <string name="app_name">Dropo Deliveryman</string>
    <string name="text_empty_string">--</string>
    <string name="text_description">Description</string>
    <string name="text_login">Sign In</string>
    <string name="text_register">Sign Up</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="text_phone_no">Phone no</string>
    <string name="text_email_or_phone">Email Or Phone</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="text_password">Password</string>
    <string name="text_address">Address</string>
    <string name="text_zip_code">Zip Code</string>
    <string name="text_mobile_no">Mobile No.</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_select_country">Select Country</string>
    <string name="text_select_city">Select City</string>
    <string name="text_set_profile_photos">Choose Photo</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_home">Home</string>
    <string name="text_earning">Earnings</string>
    <string name="text_history">History</string>
    <string name="text_done">Done</string>
    <string name="text_profile">Profile</string>
    <string name="text_payments">Payments</string>
    <string name="text_settings">Settings</string>
    <string name="text_share">Share</string>
    <string name="text_bank_details">Bank Detail</string>
    <string name="text_documents">Documents</string>
    <string name="text_log_out">Logout</string>
    <string name="text_user">Account</string>
    <string name="text_app_version">App Version</string>
    <string name="text_internet">Internet</string>
    <string name="text_re_try">RETRY</string>
    <string name="text_i_am_sure">I\'M SURE</string>
    <string name="text_attention">Attention</string>
    <string name="text_verify_account">Verify Account</string>
    <string name="text_verify_detail">Verify Details</string>
    <string name="text_email_otp">Email OTP</string>
    <string name="text_phone_otp">Phone OTP</string>
    <string name="text_vehicle_edit">Edit</string>
    <string name="text_pass_new">New Password</string>
    <string name="text_pass_retype">Confirm New Password</string>
    <string name="text_change_password">Change Password?</string>
    <string name="text_price">Price</string>
    <string name="text_total">Total</string>
    <string name="text_order_details">Order Details</string>
    <string name="text_delivery_details">Delivery Details</string>
    <string name="text_base_price">Base Price</string>
    <string name="text_distance_price">Distance Price</string>
    <string name="text_time_price">Time Price</string>
    <string name="text_service_tax">Service Tax</string>
    <string name="text_surge_price">Surge Price</string>
    <string name="text_order_price">Order Price</string>
    <string name="text_delivery_price">Delivery Price</string>
    <string name="text_promo">Promo</string>
    <string name="text_vehicle_model">Model</string>
    <string name="text_vehicle_number">Plate Number</string>
    <string name="text_document_id">Document ID</string>
    <string name="text_document_expire_date">Document Exp Date</string>
    <string name="text_submit">Submit</string>
    <string name="text_accept_job">Accept Job</string>
    <string name="text_go_offline">Go Offline</string>
    <string name="text_go_online">Go Online</string>
    <string name="text_my_location">My Location</string>
    <string name="text_available_deliveries">Available Deliveries</string>
    <string name="text_active_deliveries">Active</string>
    <string name="text_pending_deliveries">Pending</string>
    <string name="text_accept">Accept</string>
    <string name="text_reject">Reject</string>
    <string name="text_view_more"><u>View More</u></string>
    <string name="text_active_delivery">Active Delivery</string>
    <string name="text_tap_here_to_coming">Coming at Pickup Location</string>
    <string name="text_tap_here_to_arrive">Arrived at Pickup Location</string>
    <string name="text_tap_here_to_pickup">Picked Up Parcel</string>
    <string name="text_tap_here_to_start">Start Delivery</string>
    <string name="text_tap_here_to_arrive_destination">Arrived at Delivery Point</string>
    <string name="text_tap_here_to_end">End Delivery</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_pick_up_loc">Pickup Location</string>
    <string name="text_drop_location">Delivery Location</string>
    <string name="text_time_h_m">Time(h:m)</string>
    <string name="text_distance">Distance</string>
    <string name="text_pay">Pay</string>
    <string name="text_wallet">Wallet</string>
    <string name="text_card">Card</string>
    <string name="text_cash">Cash</string>
    <string name="text_complete_delivery">Complete Your Order.</string>
    <string name="text_pickup_delivery">Pickup</string>
    <string name="text_invoice">Invoice</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_confirmation_code">Confirmation Code</string>
    <string name="text_total_item_cost">Total Item Price</string>
    <string name="text_total_service_cost">Total Service Price</string>
    <string name="text_comment">Comment</string>
    <string name="text_id_number">ID Number :</string>
    <string name="text_expire_date">Exp.Date :</string>
    <string name="text_mandatory_document">* - indicates mandatory fields</string>
    <string name="text_select">SELECT</string>
    <string name="text_account_no">Account Number</string>
    <string name="text_ac_holder_name">Account Holder Name</string>
    <string name="text_bank_detail">Bank Detail</string>
    <string name="text_request_sound">Request Alert</string>
    <string name="text_request_sound_description">Plays sound when you receive a new request.</string>
    <string name="text_pick_up_sound">Pickup Alert</string>
    <string name="text_pick_up_sound_description">Plays sound when you are about to reach pickup location.</string>
    <string name="text_push_notification">Push Notification</string>
    <string name="text_push_notification_description">Play sound when you receive a push notification.</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_apply">Apply</string>
    <string name="text_reset">Reset</string>
    <string name="text_qty">Quantity</string>
    <string name="text_history_detail">History Details</string>
    <string name="text_others">Others</string>
    <string name="text_cancel_order">Cancel Order</string>
    <string name="text_select_from_date">Please select first from date</string>
    <string name="text_select_to_date">Please select to date</string>
    <string name="text_exit">Exit</string>
    <string name="text_update">Update</string>
    <string name="text_update_app">Update App</string>
    <string name="text_later">Later</string>
    <string name="text_no_item">No Item</string>
    <string name="text_confirm_detail">Confirm Details</string>
    <string name="text_or">or</string>
    <string name="text_digits">Digits.</string>
    <string name="text_items">Item</string>
    <string name="text_request_number">Request No.</string>
    <string name="text_go_online_to_receive_request">Go Online to Receive Delivery Request</string>
    <string name="text_set_document_photos">Set document photos</string>
    <string name="text_language">Language</string>
    <string name="text_select_language">Select Language</string>
    <string name="text_number">Number</string>
    <string name="text_code">Code</string>
    <string name="text_pass_confirm">Confirm Password</string>
    <string name="text_service_earning">Trip Earnings</string>
    <string name="text_other_earning">Other Earning</string>
    <string name="text_service_price">Service Price</string>
    <string name="text_tax_price">Tax Price</string>
    <string name="text_admin_profit">Admin Profit</string>
    <string name="text_provider_profit">Deliveryman Profit</string>
    <string name="text_total_earning">Total Earning</string>
    <string name="text_paid_order_amount">Paid Order Amount</string>
    <string name="text_cash_amount">Cash Amount</string>
    <string name="text_pay_to_provider">Pay To Deliveryman</string>
    <string name="text_time_online">Time Online</string>
    <string name="text_job_time">Job Time</string>
    <string name="text_total_order">Total Order</string>
    <string name="text_completed_order">Completed Order</string>
    <string name="text_accepted_order">Accepted Order</string>
    <string name="text_accepted_ratio">Accepted Ratio</string>
    <string name="text_complete_ratio">Completion Ratio</string>
    <string name="text_rejected_order">Rejected Order</string>
    <string name="text_rejected_ratio">Rejection Ratio</string>
    <string name="text_canceled_order">Cancelled Order</string>
    <string name="text_canceled_ratio">Cancellation Ratio</string>
    <string name="text_not_answered">Not Answered</string>
    <string name="text_order">Order</string>
    <string name="text_payment_by">Pay By</string>
    <string name="text_service_fees">Service Fees</string>
    <string name="text_paid_order">Paid Order</string>
    <string name="text_profit">Profit</string>
    <string name="text_Earn">Earning</string>
    <string name="text_day">Day</string>
    <string name="text_week">Week</string>
    <string name="text_daily_earning">Daily Earning</string>
    <string name="text_select_week">Select Week</string>
    <string name="text_give_rate">Give Rate</string>
    <string name="text_referral_code">Enter referral code</string>
    <string name="text_referral">Referral</string>
    <string name="text_choose_map">Choose Map</string>
    <string name="text_google_map">Google Map</string>
    <string name="text_waze_map">Waze Map</string>
    <string name="text_current_balance">Current Balance</string>
    <string name="text_Referral">Referral</string>
    <string name="text_or_desh">-OR-</string>
    <string name="text_note">Note For Item</string>
    <string name="text_delivery_status">Delivery or Order Status</string>
    <string name="text_add">Add</string>
    <string name="text_select_withdrawal_method_tag">Select Withdrawal Method</string>
    <string name="text_how_would_you_like_to_request">How would you like to request?</string>
    <string name="text_transfer_to_bank_account">Transfer to Bank Account</string>
    <string name="text_request_a_cash">Request a Cash</string>
    <string name="text_enter_amount_to_want_withdraw">Enter amount to want withdraw</string>
    <string name="text_amount">Amount</string>
    <string name="text_bank_account">Bank Account</string>
    <string name="text_description_c">Description</string>
    <string name="text_request_withdrawal">Request Withdrawal</string>
    <string name="text_cash_have">Cash On Hand</string>
    <string name="text_chat_with_admin">Chat with Admin</string>
    <string name="text_chat_with_store">Chat with Store</string>
    <string name="text_chat_with_user">Chat With User</string>
    <string name="text_chat">Chat</string>
    <string name="text_select_server" translatable="false">Select Server</string>
    <string name="text_live" translatable="false">Live</string>
    <string name="text_staging" translatable="false">Staging</string>
    <string name="text_developer" translatable="false">Developer</string>
    <string name="msg_please_enter_url" translatable="false">Please enter URL</string>
    <string name="text_other" translatable="false">Other</string>
</resources>