<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/bottom_sheet_dialog_padding_20dp"
    android:paddingTop="@dimen/bottom_sheet_dialog_padding_30dp"
    android:paddingEnd="@dimen/bottom_sheet_dialog_padding_20dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.dropo.provider.component.CustomFontTextViewTitle
            android:id="@+id/tvDialogAlertTitle"
            style="?appThemeTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:text="@string/text_select_server"
            android:textSize="@dimen/size_app_text_large" />

        <com.dropo.provider.component.CustomImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_app_edit_text_padding"
            android:paddingTop="@dimen/dimen_app_edit_text_padding"
            android:paddingEnd="@dimen/dimen_app_edit_text_padding"
            android:paddingBottom="@dimen/dimen_app_edit_text_padding"
            android:src="@drawable/ic_cross" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.dropo.provider.component.CustomFontRadioButton
            android:id="@+id/rbServer1"
            style="?appThemeRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_live" />

        <com.dropo.provider.component.CustomFontRadioButton
            android:id="@+id/rbServer2"
            style="?appThemeRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_staging" />

        <com.dropo.provider.component.CustomFontRadioButton
            android:id="@+id/rbServer3"
            style="?appThemeRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_developer" />

        <com.dropo.provider.component.CustomFontRadioButton
            android:id="@+id/rbServer4"
            style="?appThemeRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_other" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="?appThemeTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <com.dropo.provider.component.CustomFontEditTextView
            android:id="@+id/etServerUrl"
            style="?appThemeEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_please_enter_url"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.dropo.provider.component.CustomFontButton
        android:id="@+id/btnOk"
        style="?appThemeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_ok" />

</LinearLayout>

