<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?appThemeScreenBackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="WithdrawalActivity">

    <include layout="@layout/toolbar_app_custom" />


    <com.dropo.provider.component.CustomFontTextView
        style="?appThemeTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/bottom_sheet_dialog_padding_20dp"
        android:layout_marginBottom="@dimen/card_view_space_12dp"
        android:background="@drawable/shape_bg_specification"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_padding"
        android:paddingTop="5dp"
        android:paddingEnd="@dimen/activity_horizontal_padding"
        android:paddingBottom="5dp"
        android:text="@string/text_select_withdrawal_method_tag"
        android:textAllCaps="true"
        android:textSize="@dimen/size_app_text_small"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:orientation="vertical">


        <com.dropo.provider.component.CustomFontTextViewTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_how_would_you_like_to_request"
            android:textSize="@dimen/size_app_text_medium" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_app_edit_text_padding"
            android:layout_marginTop="@dimen/dimen_app_edit_text_padding"
            android:layout_marginEnd="@dimen/dimen_app_edit_text_padding"
            app:cardBackgroundColor="?appThemeModeColor"
            app:cardCornerRadius="@dimen/app_card_radius"
            app:cardElevation="@dimen/app_card_elevation">

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen_app_edit_text_padding"
                android:paddingTop="@dimen/activity_horizontal_padding"
                android:paddingEnd="@dimen/dimen_app_edit_text_padding"
                android:paddingBottom="@dimen/activity_horizontal_padding">

                <com.dropo.provider.component.CustomFontRadioButton
                    android:id="@+id/rbBankAccount"
                    style="?appThemeRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_app_edit_text_padding"
                    android:padding="@dimen/dimen_app_edit_text_padding"
                    android:text="@string/text_transfer_to_bank_account"
                    android:textSize="@dimen/size_app_text_regular" />

                <com.dropo.provider.component.CustomFontRadioButton
                    android:id="@+id/rbCash"
                    style="?appThemeRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_app_edit_text_padding"
                    android:padding="@dimen/dimen_app_edit_text_padding"
                    android:text="@string/text_request_a_cash"
                    android:textSize="@dimen/size_app_text_regular" />


            </RadioGroup>
        </androidx.cardview.widget.CardView>


        <com.dropo.provider.component.CustomFontTextViewTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/text_enter_amount_to_want_withdraw"
            android:textSize="@dimen/size_app_text_medium" />


        <com.dropo.provider.component.CustomFontEditTextView
            android:id="@+id/etAmount"
            android:theme="?appThemeEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_amount"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="@dimen/size_app_text_regular" />


        <com.dropo.provider.component.CustomFontTextViewTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/text_description_c"
            android:textSize="@dimen/size_app_text_medium" />


        <com.dropo.provider.component.CustomFontEditTextView
            android:id="@+id/etDescription"
            android:theme="?appThemeEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_description"
            android:singleLine="true"
            android:textSize="@dimen/size_app_text_regular" />

        <LinearLayout
            android:id="@+id/llSelectBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.dropo.provider.component.CustomFontTextViewTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/text_bank_account"
                android:textSize="@dimen/size_app_text_medium" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerBank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_app_edit_text_padding"
                    android:background="@null"
                    android:popupBackground="?appThemeModeColor"
                    android:spinnerMode="dropdown" />

                <com.dropo.provider.component.CustomFontTextView
                    android:id="@+id/tvAddBankAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_app_edit_text_padding"
                    android:padding="@dimen/activity_horizontal_padding"
                    android:text="@string/text_add"
                    android:visibility="gone"
                    app:appTextColor="@integer/appThemeColor" />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

    <com.dropo.provider.component.CustomFontButton
        android:id="@+id/btnWithdrawal"
        style="?appThemeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/text_request_withdrawal" />


</LinearLayout>
