<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/bottom_sheet_dialog_padding_20dp"
    android:paddingTop="@dimen/bottom_sheet_dialog_padding_30dp"
    android:paddingEnd="@dimen/bottom_sheet_dialog_padding_20dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.dropo.provider.component.CustomFontTextViewTitle
            style="?appThemeTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_padding"
            android:layout_weight="1"
            android:text="@string/text_chat"
            android:textSize="@dimen/size_app_text_large" />

        <com.dropo.provider.component.CustomImageView
            android:id="@+id/btnNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_app_edit_text_padding"
            android:paddingTop="@dimen/dimen_app_edit_text_padding"
            android:paddingBottom="@dimen/dimen_app_edit_text_padding"
            android:src="@drawable/ic_cross" />
    </LinearLayout>

    <com.dropo.provider.component.CustomFontTextView
        android:id="@+id/tvChatWithAdmin"
        style="?appThemeTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_padding"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_padding"
        android:text="@string/text_chat_with_admin"
        android:textSize="@dimen/size_app_text_medium"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_admin" />

    <com.dropo.provider.component.CustomFontTextView
        android:id="@+id/tvChatWithUser"
        style="?appThemeTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_padding"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_padding"
        android:text="@string/text_chat_with_user"
        android:textSize="@dimen/size_app_text_medium"
        app:drawableStartCompat="@drawable/ic_users" />

    <com.dropo.provider.component.CustomFontTextView
        android:id="@+id/tvChatWithStore"
        style="?appThemeTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_padding"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_padding"
        android:text="@string/text_chat_with_store"
        android:textSize="@dimen/size_app_text_medium"
        app:drawableStartCompat="@drawable/ic_sub_store" />


</LinearLayout>